--- a/plugin.video.SportsDevil/resources/catchers/Cambios/Modulos/espana.cfg
+++ b/plugin.video.SportsDevil/resources/catchers/Cambios/Modulos/espana.cfg
@@ -45,3 +45,53 @@ url=espana/verdirectotv.info.cfg
 ########################################################
 
 
+
+
+
+
+
+
+
+
+
+########################################################
+
+title=09stream by Quequequeq
+director=09stream
+icon=http://viendokodi.esforos.com/archivos/viendokodi/logos/viendokod2i.png
+url=09stream.cfg
+########################################################
+
+title=[COLOR white][B]LaTeLeTe.Tv[/B][/COLOR] by Quequequeq
+director=latelete
+icon=http://imgur.com/78vpj1G.png
+url=latelete.tv.cfg
+########################################################
+
+title=[COLOR yellow][I]Smart TV Online[/I][/COLOR] by Quequequeq
+director=smart-tv-online
+icon=http://imgur.com/qN4Tif7.png
+url=smart-tv-online.blogspot.com.es.cfg
+########################################################
+
+title=televisiondirectamex by Quequequeq
+director=televisiondirectamex
+icon=http://viendokodi.esforos.com/archivos/viendokodi/logos/viendokod2i.png
+url=televisiondirectamex.cfg
+########################################################
+
+title=zimblektv02 by Quequequeq
+director=zimblektv02
+icon=http://viendokodi.esforos.com/archivos/viendokodi/logos/viendokod2i.png
+url=zimblektv02.cfg
+########################################################
+
+title=[COLORFF144355]Ver[COLORFF298293]La[COLORFF144355]Tele[COLORFF298293]Gratis[/COLOR] by Quequequeq
+director=queque
+icon=http://verlatelegratis.net/wp-content/themes/wtb-video-green/images/logo.gif
+cfg=espana/verlatelegratis.cfg
+url=http://verlatelegratis.net/
+########################################################
+
+
+
