--- a/plugin.video.SportsDevil/resources/catchers/__streams.cfg
+++ b/plugin.video.SportsDevil/resources/catchers/__streams.cfg
@@ -673,22 +673,6 @@ item_precheck=cast3d.tv
 item_order=video
 @CATCH(cast3d,video)@
 
-
-
-########################################################
-# SawLive - Videos
-########################################################
-item_infos=src=["']([^\"\']*sawlive.tv/embed/[^"'/]+)
-item_precheck=sawlive.tv
-item_order=video
-@CATCH(ustream3,video)@
-########################################################
-item_infos=javascript["']\s*src=["']sw([^"']+)["']
-item_precheck=live9.net
-item_order=video
-@CATCH(ustream3,'http://www.sawlive.tv/embed/'+ video +'')@
-
-
 ########################################################
 # MeGom - Videos
 ########################################################
@@ -740,78 +724,6 @@ item_infos=byetv.org/channel.php\?file=(\d+)
 item_precheck=byetv.org/channel
 item_order=video
 @CATCH(byetv,video)@
-
-
-
-########################################################
-# DinoZap - Videos
-########################################################
-item_infos=((?:www\.)?dinozap.info/redirect/channel.php\?id=[^"']+)
-item_precheck=dinozap.info/redirect
-item_order=video
-@CATCH(dinohls,video)@
-########################################################
-item_infos=((?:www\.)?playerhd1.pw/channel.php\?file=[^"']+)
-item_precheck=playerhd1.pw
-item_order=video
-@CATCH(dinohls,video)@
-########################################################
-item_infos=((?:www\.)?playerhd2.pw/channel.php\?file=[^"']+)
-item_precheck=playerhd2.pw
-item_order=video
-@CATCH(dinohls,video)@
-########################################################
-item_infos=((?:www\.)?playerapp1.pw/channel(?:fr)?.php\?file=[^"']+)
-item_precheck=playerapp1.pw
-item_order=video
-@CATCH(dinohls,video)@
-########################################################
-item_infos=((?:www\.)?playerapp2.pw/channel(?:fr)?.php\?file=[^"']+)
-item_precheck=playerapp2.pw
-item_order=video
-@CATCH(dinohls,video)@
-########################################################
-item_infos=(tv.verdirectotv.org/channel.php\?file=[^"']+)
-item_precheck=verdirectotv.org/channel
-item_order=video
-@CATCH(dinohls,video)@
-########################################################
-item_infos=((?:www\.)?dinostream.pw/channel.php\?file=[^"']+)
-item_precheck=dinostream.pw/channel
-item_order=video
-@CATCH(dinohls,video)@
-########################################################
-item_infos=((?:www\.)?serverhd.eu/channel\w+\.php\?file=[^"']+)
-item_precheck=serverhd.eu
-item_order=video
-@CATCH(dinohls,video)@
-########################################################
-item_infos=((?:www\.)?sitenow.me/channel.php\?file=[^"']+)
-item_precheck=sitenow.me
-item_order=video
-@CATCH(dinohls,video)@
-########################################################
-item_infos=((?:www\.)?sstream.pw/channel.php\?file=[^"']+)
-item_precheck=sstream.pw
-item_order=video
-@CATCH(dinohls,video)@
-########################################################
-item_infos=((?:www\.)?sunhd.info/channel.php\?file=[^"']+)
-item_precheck=sunhd.info
-item_order=video
-@CATCH(dinohls,video)@
-########################################################
-item_infos=((?:www\.)?ponlatv.com/channel.php\?file=[^"']+)
-item_precheck=ponlatv.com
-item_order=video
-@CATCH(dinohls,video)@
-########################################################
-item_infos=((?:www\.)?teledeporteonline.pw/channel.php\?file=[^"']+)
-item_precheck=teledeporteonline.pw
-item_order=video
-@CATCH(dinohls,video)@
-
-
 
 ########################################################
 # Vipi - Videos
@@ -1591,6 +1503,93 @@ item_infos=vercosasgratis.com/channel.php\?file=([^&"]+)
 item_precheck=vercosasgratis.com
 item_order=video
 @CATCH(vercosasgratis,video)@
+
+
+########################################################
+# SawLive - Videos   By JairoX
+########################################################
+item_infos=src=["'][^\"\']*sawlive.tv/embed/([^"'/]+)
+item_precheck=sawlive.tv
+item_order=video
+@CATCH(sawlive,'http://www3.sawlive.tv/embed/'+ video +'')@
+########################################################
+item_infos=javascript["']\s*src=["']sw([^"']+)["']
+item_precheck=live9.net
+item_order=video
+@CATCH(ustream3,'http://www3.sawlive.tv/embed/'+ video +'')@
+
+
+
+
+
+
+########################################################
+# DinoZap - Videos     by Goldonx
+########################################################
+item_infos=((?:www\.)?dinozap.info/redirect/channel.php\?id=[^"']+)
+item_precheck=dinozap.info/redirect
+item_order=video
+@CATCH(dinohls,video)@
+########################################################
+item_infos=((?:www\.)?playerhd1.pw/channel.php\?file=[^"']+)
+item_precheck=playerhd1.pw
+item_order=video
+@CATCH(dinohls,video)@
+########################################################
+item_infos=((?:www\.)?playerhd2.pw/channel.php\?file=[^"']+)
+item_precheck=playerhd2.pw
+item_order=video
+@CATCH(dinohls,video)@
+########################################################
+item_infos=((?:www\.)?playerapp1.pw/channel(?:fr)?.php\?file=[^"']+)
+item_precheck=playerapp1.pw
+item_order=video
+@CATCH(dinohls,video)@
+########################################################
+item_infos=((?:www\.)?playerapp2.pw/channel(?:fr)?.php\?file=[^"']+)
+item_precheck=playerapp2.pw
+item_order=video
+@CATCH(dinohls,video)@
+########################################################
+item_infos=(tv.verdirectotv.org/channel.php\?file=[^"']+)
+item_precheck=verdirectotv.org/channel
+item_order=video
+@CATCH(dinohls,video)@
+########################################################
+item_infos=((?:www\.)?dinostream.pw/channel.php\?file=[^"']+)
+item_precheck=dinostream.pw/channel
+item_order=video
+@CATCH(dinohls,video)@
+########################################################
+item_infos=((?:www\.)?serverhd.eu/channel\w+\.php\?file=[^"']+)
+item_precheck=serverhd.eu
+item_order=video
+@CATCH(dinohls,video)@
+########################################################
+item_infos=((?:www\.)?sitenow.me/channel.php\?file=[^"']+)
+item_precheck=sitenow.me
+item_order=video
+@CATCH(dinohls,video)@
+########################################################
+item_infos=((?:www\.)?sstream.pw/channel.php\?file=[^"']+)
+item_precheck=sstream.pw
+item_order=video
+@CATCH(dinohls,video)@
+########################################################
+item_infos=((?:www\.)?sunhd.info/channel.php\?file=[^"']+)
+item_precheck=sunhd.info
+item_order=video
+@CATCH(dinohls,video)@
+########################################################
+item_infos=((?:www\.)?ponlatv.com/channel.php\?file=[^"']+)
+item_precheck=ponlatv.com
+item_order=video
+@CATCH(dinohls,video)@
+########################################################
+item_infos=((?:www\.)?teledeporteonline.pw/channel.php\?file=[^"']+)
+item_precheck=teledeporteonline.pw
+item_order=video
+@CATCH(dinohls,video)@
 
 
 
