--- a/plugin.video.SportsDevil/resources/catchers/__streams.cfg
+++ b/plugin.video.SportsDevil/resources/catchers/__streams.cfg
@@ -5,14 +5,9 @@
 # SopCast - Videos
 ########################################################
 item_infos=sop://[^:]+:3912/(\d+)
-item_precheck=sop://
 item_order=video
 @CATCH(sopcastp2p,video)@
-########################################################
-item_infos=sop://[^:]+:3912/(\d+)
-item_precheck=sop://
-item_order=video
-@CATCH(sopcastplexus,video)@
+
 
 
 ########################################################
@@ -27,11 +22,6 @@ item_infos=acestream://([^"']+)
 item_precheck=acestream://
 item_order=video
 @CATCH(acestreamp2p,video)@
-########################################################
-item_infos=acestream://([^"']+)
-item_precheck=acestream://
-item_order=video
-@CATCH(acestreamplexus,video)@
 #######################################################
 item_infos=this.loadPlayer\("([^"']+)"
 item_precheck=TorrentStream
@@ -47,11 +37,6 @@ item_infos=http://torrentstream.(?:net|org)/(?:p|embed)/(\w+)
 item_precheck=torrentstream
 item_order=video
 @CATCH(acestreamp2p,video)@
-#######################################################
-item_infos=http://torrentstream.(?:net|org)/(?:p|embed)/(\w+)
-item_precheck=torrentstream
-item_order=video
-@CATCH(acestreamplexus,video)@
 #######################################################
 item_infos=http://([^a]+)acelive
 item_precheck=http://
@@ -62,11 +47,6 @@ item_infos=http://([^a]+)acelive
 item_precheck=http://
 item_order=video
 @CATCH(acestreamp2p,'http://' + video + 'acelive')@
-#######################################################
-item_infos=http://([^a]+)acelive
-item_precheck=http://
-item_order=video
-@CATCH(acestreamplexus,'http://' + video + 'acelive')@
 ########################################################
 item_infos=avod.me/play/([^"']+)
 item_precheck=avod.me
@@ -78,11 +58,6 @@ item_precheck=avod.me
 item_order=video
 @CATCH(acestreamp2p,video)@
 ########################################################
-item_infos=avod.me/play/([^"']+)
-item_precheck=avod.me
-item_order=video
-@CATCH(acestreamplexus,video)@
-########################################################
 item_infos=initAceStreamPlayer\(['"]([^'"]+)
 item_precheck=AceStreamPlayer
 item_order=video
@@ -93,11 +68,6 @@ item_precheck=AceStreamPlayer
 item_order=video
 @CATCH(acelivep2p,video)@
 ########################################################
-item_infos=initAceStreamPlayer\(['"]([^'"]+)
-item_precheck=AceStreamPlayer
-item_order=video
-@CATCH(acestreamplexus,video)@
-########################################################
 item_infos=playlistLoadAsync\(['"]([^'"]+)
 item_precheck=acestream
 item_order=video
@@ -107,21 +77,15 @@ item_infos=playlistLoadAsync\(['"]([^'"]+)
 item_precheck=acestream
 item_order=video
 @CATCH(acelivep2p,video)@
-########################################################
-item_infos=playlistLoadAsync\(['"]([^'"]+)
-item_precheck=acestream
-item_order=video
-@CATCH(acestreamplexus,video)@
 #######################################################
 item_infos=this.loadPlayer\("([^"']+)"
 item_precheck=TorrentStream
 item_order=video
 @CATCH(acestreamp2p,video)@
 #######################################################
-item_infos=this.loadPlayer\("([^"']+)"
-item_precheck=TorrentStream
-item_order=video
-@CATCH(acestreamplexus,video)@
+
+
+
 
 
 ########################################################
@@ -1522,3 +1486,53 @@ item_infos=streams247.net/zenex.html\?id=(\w+)
 item_precheck=streams247.net
 item_order=video
 @CATCH(zenex,'wl'+video+'')@
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+########################################################
+#Yescast              by Goldonx 06-10-15
+########################################################
+item_infos=yescast.net/channel.php\?file=(\w+)
+item_precheck=yescast.net
+item_order=video
+@CATCH(yescast,video)@
+
+
+########################################################
+# Vercosasgratis - Videos by Goldonx
+########################################################
+item_infos=vercosasgratis.com/channel.php\?file=([^&"]+)
+item_precheck=vercosasgratis.com
+item_order=video
+@CATCH(vercosasgratis,video)@
+
+
+
+
+
