--- a/plugin.video.SportsDevil/resources/modules/espana/09stream.com.cfg
+++ b/plugin.video.SportsDevil/resources/modules/espana/09stream.com.cfg
@@ -8,35 +8,31 @@ skill=videoTitle
 ########################################################
 # Category
 ########################################################
-title=[COLOR orange]Nacionales[/COLOR]
+title=Nacionales
 cfg=09stream.com.cfg@Catch
 url=http://09stream.com/category/canales-nacionales-espana/
 ########################################################
-title=[COLOR orange]Deportes[/COLOR]
+title=Deportes
 cfg=09stream.com.cfg@Catch
 url=http://09stream.com/category/canales-deportes/
 ########################################################
-title=[COLOR orange]Documentales[/COLOR]
+title=Documentales
 cfg=09stream.com.cfg@Catch
 url=http://09stream.com/category/canales-documentales/
 ########################################################
-title=[COLOR orange]Cine[/COLOR]
+title=Cine
 cfg=09stream.com.cfg@Catch
 url=http://09stream.com/category/canales-peliculas/
 ########################################################
-title=[COLOR orange]Series[/COLOR]
+title=Series
 cfg=09stream.com.cfg@Catch
 url=http://09stream.com/category/canales-series/
 ########################################################
-title=[COLOR orange]Gran Hermano[/COLOR]
-cfg=09stream.com.cfg@Catch
-url=http://09stream.com/category/gran-hermano/
-########################################################
-title=[COLOR orange]Toros[/COLOR]                                  ¡¡Respeta al mundo animal!!
+title=Toros
 cfg=09stream.com.cfg@Catch
 url=http://09stream.com/category/canal-de-toros/
 ########################################################
-title=[COLOR red]XXX[/COLOR]
+title=+18
 cfg=09stream.com.cfg@Catch
 url=http://www.tivee.es/
 ########################################################
