--- a/plugin.video.SportsDevil/resources/modules/mainMenu.cfg
+++ b/plugin.video.SportsDevil/resources/modules/mainMenu.cfg
@@ -36,23 +36,11 @@ director=SportsDevil
 icon=
 url=customs.cfg
 ########################################################
-
-
-
-
-
-
-
-
-
-########################################################
-#  By Quequeq
-title=[COLORFFF30000]ES[COLORyellow]PA[COLORFFF30000]ÑA[/COLOR]
+title=Spain TV
 type=rss
-genre=canales españoles
+genre=Spain TV
 director=SportsDevil
-icon=http://imgur.com/2e69gkh.png
+icon=
 url=espana.cfg
-
 
 
