--- a/plugin.video.SportsDevil/resources/modules/espana/tpi.cfg
+++ b/plugin.video.SportsDevil/resources/modules/espana/tpi.cfg
@@ -10,13 +10,13 @@ catcher=videos
 ########################################################
 # Category
 ########################################################
-title=[COLORFF0042D7]Agenda Deportiva[/COLOR]
+title=Agenda Deportiva
 cfg=tpi.cfg@Events
 icon=http://imgur.com/zyYOQuA.png
 url=http://www.tumundo.futbol/agenda.php
 #url=http://www.tv-porinternet.com/
 ########################################################
-title=[COLORFFF30000]Categorias[/COLOR]
+title=Categorias
 cfg=tpi.cfg@Categorias
 icon=http://imgur.com/zyYOQuA.png
 url=http://www.tv-porinternet.com/
