--- a/plugin.video.SportsDevil/resources/modules/livesports.cfg
+++ b/plugin.video.SportsDevil/resources/modules/livesports.cfg
@@ -20,7 +20,7 @@ url=livesports/livetv.ru.cfg
 title=LSHunter.tv
 director=LSHunter.tv
 icon=sports.devil.image|lshunter_tv.png
-url=livesports/lshunter.tv.cfg
+url=livesports/lshunter-new.cfg
 ########################################################
 title=RojaDirecta.me
 director=RojaDirecta.me
@@ -32,15 +32,15 @@ director=VipBox.tv
 icon=sports.devil.image|vipbox.png
 url=livesports/vipbox.tv.cfg
 ########################################################
-title=Zunox.hk
-director=zunox.hk
-icon=sports.devil.image|zunoxlogo3.png
-url=livesports/slipstreamtv.co.cfg
+# title=Zunox.hk
+# director=zunox.hk
+# icon=sports.devil.image|zunoxlogo3.png
+# url=livesports/slipstreamtv.co.cfg
 ########################################################
 title=StopStream.com
 director=stopstream.com
 icon=sports.devil.image|stopstream.tv.png
-url=livesports/stopstream.com.cfg
+url=livesports/sportlemon.cfg
 ########################################################
 title=Dimsports.eu
 director=dimsports.eu
@@ -75,35 +75,4 @@ url=livesports/streamsports.me.cfg
 title=livesportstreams.tv
 director=livesportstreams.tv
 icon=
-url=livesports/livesportstreams.tv.cfg
-
-
-
-
-
-
-
-
-
-
-
-
-########################################################
-##DMO
-########################################################
-title=RojaDirecta SinBloqueo (Spain)
-director=http://www.rinconrojadirecta.com/
-icon=sports.devil.image|roja.jpg
-url=livesports/rojadirecta_unblocked.cfg
-########################################################
-
-########################################################
-##   Quequeq
-########################################################
-title=Wiz1.net
-director=http://www.rinconrojadirecta.com/
-icon=http://icons.iconarchive.com/icons/tpdkdesign.net/refresh-cl/256/folder-red-mydocuments-icon.png
-url=livesports/wiz.cfg
-########################################################
-
-
+url=livesports/livesportstreams-wrapper.cfg
