--- a/plugin.video.SportsDevil/resources/modules/espana/09stream.com.cfg
+++ b/plugin.video.SportsDevil/resources/modules/espana/09stream.com.cfg
@@ -8,31 +8,35 @@ skill=videoTitle
 ########################################################
 # Category
 ########################################################
-title=Nacionales
+title=[COLOR orange]Nacionales[/COLOR]
 cfg=09stream.com.cfg@Catch
 url=http://09stream.com/category/canales-nacionales-espana/
 ########################################################
-title=Deportes
+title=[COLOR orange]Deportes[/COLOR]
 cfg=09stream.com.cfg@Catch
 url=http://09stream.com/category/canales-deportes/
 ########################################################
-title=Documentales
+title=[COLOR orange]Documentales[/COLOR]
 cfg=09stream.com.cfg@Catch
 url=http://09stream.com/category/canales-documentales/
 ########################################################
-title=Cine
+title=[COLOR orange]Cine[/COLOR]
 cfg=09stream.com.cfg@Catch
 url=http://09stream.com/category/canales-peliculas/
 ########################################################
-title=Series
+title=[COLOR orange]Series[/COLOR]
 cfg=09stream.com.cfg@Catch
 url=http://09stream.com/category/canales-series/
 ########################################################
-title=Toros
+title=[COLOR orange]Gran Hermano[/COLOR]
+cfg=09stream.com.cfg@Catch
+url=http://09stream.com/category/gran-hermano/
+########################################################
+title=[COLOR orange]Toros[/COLOR]                                  ¡¡Respeta al mundo animal!!
 cfg=09stream.com.cfg@Catch
 url=http://09stream.com/category/canal-de-toros/
 ########################################################
-title=+18
+title=[COLOR red]XXX[/COLOR]
 cfg=09stream.com.cfg@Catch
 url=http://www.tivee.es/
 ########################################################
