--- a/plugin.video.SportsDevil/resources/modules/espana/telefivegb.com.cfg
+++ b/plugin.video.SportsDevil/resources/modules/espana/telefivegb.com.cfg
@@ -6,11 +6,11 @@ skill=videoTitle
 ########################################################
 # Category
 ########################################################
-title=Canales de Deporte
+title=Canales de Deporte en Espanol
 cfg=telefivegb.com.cfg@Catch
 url=http://www.telefivegb.com/category/deporte/
 ########################################################
-title=Canales de Deporte
+title=Canales de Deporte en Espanol Pag 2
 cfg=telefivegb.com.cfg@Catch
 url=http://www.telefivegb.com/category/deporte/page/2/
 ########################################################
