--- a/plugin.video.SportsDevil/resources/modules/mainMenu.cfg
+++ b/plugin.video.SportsDevil/resources/modules/mainMenu.cfg
@@ -36,11 +36,23 @@ director=SportsDevil
 icon=
 url=customs.cfg
 ########################################################
-title=Spain TV
+
+
+
+
+
+
+
+
+
+########################################################
+#  By Quequeq
+title=[COLORFFF30000]ES[COLORyellow]PA[COLORFFF30000]ÑA[/COLOR]
 type=rss
-genre=Spain TV
+genre=canales españoles
 director=SportsDevil
-icon=
+icon=http://imgur.com/2e69gkh.png
 url=espana.cfg
+
 
 
