--- a/plugin.video.SportsDevil/resources/modules/espana/ligatv.cfg
+++ b/plugin.video.SportsDevil/resources/modules/espana/ligatv.cfg
@@ -11,12 +11,12 @@ catcher=videos
 ########################################################
 # Category
 ########################################################
-title=Agenda Deportiva
+title=[COLORFF0042D7]Agenda Deportiva[/COLOR]
 cfg=ligatv.cfg@Events
 icon=http://seacyber.smkn1-sby.sch.id/images/schedule.png
 url=http://agenda.ligatvlive.com/programacion.html
 ########################################################
-title=Categorias
+title=[COLORFFF30000]Categorias[/COLOR]
 cfg=ligatv.cfg@Categorias
 icon=http://icons.iconarchive.com/icons/tpdkdesign.net/refresh-cl/256/folder-red-mydocuments-icon.png
 url=http://agenda.ligatvlive.com/programacion.html
@@ -87,17 +87,17 @@ item_url_build=%s
 @IF(@PARAM1@!=Channels)@
 @IF(@PARAM1@!=Streams)@
 ########################################################
-title=Deportes
+title=[COLORFF0042D7]Deportes[/COLOR]
 cfg=ligatv.cfg@Channels
 icon=http://icons.iconarchive.com/icons/ergosign/soccer-worldcup-2010/256/soccer-referee-grass-icon.png
 url=http://deportes.ligatvlive.com/
 ########################################################
-title=Noticias
+title=[COLORFF0042D7]Noticias[/COLOR]
 cfg=ligatv.cfg@Channels
 icon=http://icons.iconarchive.com/icons/pelfusion/long-shadow-ios7/256/News-icon.png
 url=http://deportes.ligatvlive.com/noticias.html
 ########################################################
-title=Adultos
+title=[COLORFF0042D7]Adultos[/COLOR]
 cfg=ligatv.cfg@Channels
 icon=http://rocketdock.com/images/screenshots/adult_fav_256.png
 url=http://deportes.ligatvlive.com/adultos.html
