--- a/plugin.video.SportsDevil/resources/catchers/Cambios/Modulos/espana/verdirectotv.com.cfg
+++ b/plugin.video.SportsDevil/resources/catchers/Cambios/Modulos/espana/verdirectotv.com.cfg
@@ -1,45 +1,50 @@
 ########################################################
-# http://09stream.com/
-# 06/11/2015
-# Nano Barrios
+# http://verdirectotv.com/
 ########################################################
 skill=videoTitle
 @IF(@PARAM1@!=Catch)@
 ########################################################
 # Category
 ########################################################
-title=[COLOR orange]Nacionales[/COLOR]
-cfg=09stream.com.cfg@Catch
-url=http://09stream.com/category/canales-nacionales-espana/
+title=TVENDIRECTO
+cfg=verdirectotv.com.cfg@Catch
+url=http://verdirectotv.com/ver-television-en-directo/
 ########################################################
-title=[COLOR orange]Deportes[/COLOR]
-cfg=09stream.com.cfg@Catch
-url=http://09stream.com/category/canales-deportes/
+title=TELEVISION
+cfg=verdirectotv.com.cfg@Catch
+url=http://verdirectotv.com/category/ver-television-de-espana-en-directo-gratis-las-24-horas/
 ########################################################
-title=[COLOR orange]Documentales[/COLOR]
-cfg=09stream.com.cfg@Catch
-url=http://09stream.com/category/canales-documentales/
+title=DEPORTES
+cfg=verdirectotv.com.cfg@Catch
+url=http://verdirectotv.com/category/ver-deportes-en-directo-online/
 ########################################################
-title=[COLOR orange]Cine[/COLOR]
-cfg=09stream.com.cfg@Catch
-url=http://09stream.com/category/canales-peliculas/
+title=DIGITALES
+cfg=verdirectotv.net.cfg@Catch
+url=http://verdirectotv.com/category/digitales-gratis/
 ########################################################
-title=[COLOR orange]Series[/COLOR]
-cfg=09stream.com.cfg@Catch
-url=http://09stream.com/category/canales-series/
+title=DOCUM.
+cfg=verdirectotv.net.cfg@Catch
+url=http://verdirectotv.com/category/documentales-online-gratis/
 ########################################################
-title=[COLOR orange]Gran Hermano[/COLOR]
-cfg=09stream.com.cfg@Catch
-url=http://09stream.com/category/gran-hermano/
+title=PELICULAS
+cfg=verdirectotv.net.cfg@Catch
+url=http://verdirectotv.com/category/peliculas-online-gratis/
 ########################################################
-title=[COLOR orange]Toros[/COLOR]                                  ¡¡Respeta al mundo animal!!
-cfg=09stream.com.cfg@Catch
-url=http://09stream.com/category/canal-de-toros/
+title=SERIES
+cfg=verdirectotv.net.cfg@Catch
+url=http://verdirectotv.com/category/series-2/
 ########################################################
-title=[COLOR red]XXX[/COLOR]
-cfg=09stream.com.cfg@Catch
-url=http://09stream.com/category/canales-adultos/
+title=ADULTOS
+cfg=verdirectotv.net.cfg@Catch
+url=http://verdirectotv.com/category/adultos/
 ########################################################
+title=AUTONOMICAS
+cfg=verdirectotv.net.cfg@Catch
+url=http://verdirectotv.com/category/autonomicas/
+########################################################
+title=FUTBOL
+cfg=verdirectotv.net.cfg@Catch
+url=http://verdirectotv.com/tag/ver-futbol-en-directo/
 ########################################################
 
 @ENDIF@
