--- a/plugin.video.SportsDevil/resources/catchers/Cambios/Modulos/espana/verdirectotv.info.cfg
+++ b/plugin.video.SportsDevil/resources/catchers/Cambios/Modulos/espana/verdirectotv.info.cfg
@@ -1,44 +1,42 @@
 ########################################################
-# http://09stream.com/
-# 06/11/2015
-# Nano Barrios
+# http://verdirectotv.info/
 ########################################################
 skill=videoTitle
 @IF(@PARAM1@!=Catch)@
 ########################################################
 # Category
 ########################################################
-title=[COLOR orange]Nacionales[/COLOR]
-cfg=09stream.com.cfg@Catch
-url=http://09stream.com/category/canales-nacionales-espana/
+title=INICIO
+cfg=verdirectotv.info.cfg@Catch
+url=http://verdirectotv.info/
 ########################################################
-title=[COLOR orange]Deportes[/COLOR]
-cfg=09stream.com.cfg@Catch
-url=http://09stream.com/category/canales-deportes/
+title=TELEVISION
+cfg=verdirectotv.info.cfg@Catch
+url=http://verdirectotv.info/category/television/ver-television-de-espana-en-directo-gratis-las-24-horas/
 ########################################################
-title=[COLOR orange]Documentales[/COLOR]
-cfg=09stream.com.cfg@Catch
-url=http://09stream.com/category/canales-documentales/
+title=DEPORTES
+cfg=verdirectotv.info.cfg@Catch
+url=http://verdirectotv.info/category/ver-deportes-en-directo-online/
 ########################################################
-title=[COLOR orange]Cine[/COLOR]
-cfg=09stream.com.cfg@Catch
-url=http://09stream.com/category/canales-peliculas/
+title=DIGITALES
+cfg=verdirectotv.info.cfg@Catch
+url=http://verdirectotv.info/category/digitales-gratis/
 ########################################################
-title=[COLOR orange]Series[/COLOR]
-cfg=09stream.com.cfg@Catch
-url=http://09stream.com/category/canales-series/
+title=NACIONALES
+cfg=verdirectotv.info.cfg@Catch
+url=http://verdirectotv.info/category/television/
 ########################################################
-title=[COLOR orange]Gran Hermano[/COLOR]
-cfg=09stream.com.cfg@Catch
-url=http://09stream.com/category/gran-hermano/
+title=AUTONOMICOS
+cfg=verdirectotv.info.cfg@Catch
+url=http://verdirectotv.info/category/autonomicas/
 ########################################################
-title=[COLOR orange]Toros[/COLOR]                                  ¡¡Respeta al mundo animal!!
-cfg=09stream.com.cfg@Catch
-url=http://09stream.com/category/canal-de-toros/
+title=DOCUMENTALES
+cfg=verdirectotv.info.cfg@Catch
+url=http://verdirectotv.info/category/documentales-online-gratis/
 ########################################################
-title=[COLOR red]XXX[/COLOR]
-cfg=09stream.com.cfg@Catch
-url=http://09stream.com/category/canales-adultos/
+title=SERIES
+cfg=verdirectotv.info.cfg@Catch
+url=http://verdirectotv.info/?s=SERIES&x=0&y=0
 ########################################################
 ########################################################
 
