--- a/plugin.video.SportsDevil/resources/modules/livesports.cfg
+++ b/plugin.video.SportsDevil/resources/modules/livesports.cfg
@@ -32,6 +32,11 @@ director=VipBox.tv
 icon=sports.devil.image|vipbox.png
 url=livesports/vipbox.tv.cfg
 ########################################################
+title=SportStream365
+director=sportstream365
+icon=http://sportstream365.com/img/logo_en.png
+url=livesports/sportstream365.cfg
+########################################################
 title=VipGoal.net
 director=VipGoal.net
 icon=http://www.vipgoal.net/VIPgoal/img/logo.png
