--- a/plugin.video.SportsDevil/resources/modules/livesports/sportstream365.cfg
+++ b/plugin.video.SportsDevil/resources/modules/livesports/sportstream365.cfg
@@ -18,8 +18,8 @@ sort=name
 ########################################################
 # Events                                                   
 ########################################################
-item_infos="FirstGameId":(\d+),.*?"Opp1":"([^"]+)","Opp2":"([^"]+).*?Sport":"([^"]+)".*?"Start":(\d+)
-item_order=id|title1|title2|sport|time.tmp
+item_infos="FirstGameId":(\d+),.*?"Liga":"([^"]*)".*?"Opp1":"([^"]*)","Opp2":"([^"]*).*?Sport":"([^"]+)".*?"Start":(\d+)
+item_order=id|liga|title1|title2|sport|time.tmp
 item_skill=rss
 
 item_info_name=time
@@ -29,10 +29,18 @@ item_info_convert=convTimestamp('%H:%M')
 item_info_convert=debug
 item_info_build=%s
 
+@IF(@PARAM2@==Others)@
 item_info_name=title
-item_info_from='[COLOR=cyan]' + sport + '[/COLOR] [COLOR=blue][' + time + '][/COLOR] ' + title1 + ' - ' + title2
+item_info_from='[COLOR=cyan]' + sport + '[/COLOR] [COLOR=blue][' + time + '][/COLOR] [COLOR=green][' + liga + '][/COLOR] ' + title1 + ' - ' + title2
 item_info_convert=debug
 item_info_build=%s
+@ENDIF@
+@IF(@PARAM2@!=Others)@
+item_info_name=title
+item_info_from='[COLOR=blue][' + time + '][/COLOR] [COLOR=green][' + liga + '][/COLOR] ' + title1 + ' - ' + title2
+item_info_convert=debug
+item_info_build=%s
+@ENDIF@
 
 item_info_name=url
 item_info_from=id
